# DaGrandRenderer

./: CMakeLists.txt
DaGrandRenderer/Header/: Shader.h  Texture.h
DaGrandRenderer/Shader/: fObject.glsl  vObject.glsl
DaGrandRenderer/Source/: Shader.cpp  Texture.cpp  main.cpp
